Add horn and brake buttons

--- a/controller_android/app/src/main/res/values/strings.xml
+++ b/controller_android/app/src/main/res/values/strings.xml
@@ -1,9 +1,15 @@
 <resources>
     <string name="app_name">RC Car Controller</string>
+
     <string name="activity_device_list_control_begin_text">Click the button to seart searching for devices</string>
     <string name="activity_device_list_control_begin_button">Search</string>
     <string name="activity_device_list_control_cancel_text">Searching for devices…</string>
     <string name="activity_device_list_control_cancel_button">Stop</string>
     <string name="activity_device_list_control_retry_text">Search complete</string>
     <string name="activity_device_list_control_retry_button">Retry</string>
+
+    <string name="activity_controller_value_speed">Speed:</string>
+    <string name="activity_controller_value_direction">Direction:</string>
+    <string name="activity_controller_brake">Brake</string>
+    <string name="activity_controller_horn">Horn</string>
 </resources>
