Add settings menu option, fix minor bugs

--- a/controller_android/app/src/main/res/values/strings.xml
+++ b/controller_android/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="activity_controller_value_direction">Direction:</string>
     <string name="activity_controller_brake">Brake</string>
     <string name="activity_controller_horn">Horn</string>
+
+    <string name="menu_settings_title">Settings</string>
 </resources>
